SearchIPCRouterPolicy: Use committed instead of visible URL to check for NTP

The visible URL doesn't always correspond to the actual page that's
loaded. For example, if the user types in a URL that ends up being a
download, then the visible URL corresponds to the download, but the NTP
is still there and should remain functional.

Bug: 592273
Change-Id: Ib2e0a7df8658e55030ee5e67959a0ebc486e495d